Notebook import optimizasyonu: numpy/json merkezi ilk hücreye alındı; tüm tekrarlı importlar temizlendi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,22 +5,22 @@
       "id": "8567c601",
       "metadata": {},
       "source": [
-        "# NPM Kompleks Ağ Analizi (Top N)",
-        "",
-        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.",
-        "",
-        "**Amaç**",
-        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek",
-        "- Zincirleme etki (cascading impact) potansiyelini nicel görmek",
-        "- Sonuçları yineleyebilir şekilde görselleştirmek ve raporlamak",
-        "",
-        "**Yöntem**",
-        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli).",
-        "- Ağ Modeli: NetworkX DiGraph; kenar yönü Dependent → Dependency (bağımlı paket → bağımlılık).",
-        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness (köprü rol).",
-        "- Performans: Büyük graf’larda betweenness yaklaşık örnekleme ile hızlandırılır.",
-        "- Çıktılar: Tüm sonuçlar `results/` klasörüne kaydedilir (CSV/MD/JSON + PNG/SVG).",
-        "",
+        "# NPM Kompleks Ağ Analizi (Top N)\n",
+        "\n",
+        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.\n",
+        "\n",
+        "**Amaç**\n",
+        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek\n",
+        "- Zincirleme etki (cascading impact) potansiyelini nicel görmek\n",
+        "- Sonuçları yineleyebilir şekilde görselleştirmek ve raporlamak\n",
+        "\n",
+        "**Yöntem**\n",
+        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli).\n",
+        "- Ağ Modeli: NetworkX DiGraph; kenar yönü Dependent → Dependency (bağımlı paket → bağımlılık).\n",
+        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness (köprü rol).\n",
+        "- Performans: Büyük graf’larda betweenness yaklaşık örnekleme ile hızlandırılır.\n",
+        "- Çıktılar: Tüm sonuçlar `results/` klasörüne kaydedilir (CSV/MD/JSON + PNG/SVG).\n",
+        "\n",
         "Varsayılan Top N = 1000 (değiştirilebilir)."
       ]
     },
@@ -45,15 +45,8 @@
         "from pathlib import Path\n",
         "import sys\n",
         "import os\n",
+        "import matplotlib\n",
         "\n",
-        "# Matplotlib kontrol/kurulum (gerekirse)\n",
-        "import matplotlib  # noqa: F401\n",
-        "print('matplotlib hazır')\n",
-        "import subprocess\n",
-        "print('matplotlib eksik; kuruluyor...')\n",
-        "subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'matplotlib'])\n",
-        "import matplotlib  # noqa: F401\n",
-        "print('kurulum tamam')\n",
         "\n",
         "import networkx as nx\n",
         "from analysis_helpers import (\n",
@@ -65,10 +58,12 @@
         "save_report,\n",
         ")\n",
         "\n",
+        "import json\n",
+        "import numpy as np\n",
         "TOP_N = 1000  # Top N paket (varsayılan)\n",
-        "INCLUDE_PEER_DEPS = False  # peerDependencies'i eklemek icin True yapin",
-        "RISK_WEIGHTS = (0.5, 0.2, 0.3)  # (w_in, w_out, w_btw)",
-        "SAMPLE_K = None  # Betweenness örnekleme (None=tahmine dayalı)",
+        "INCLUDE_PEER_DEPS = False  # peerDependencies'i eklemek icin True yapin\n",
+        "RISK_WEIGHTS = (0.5, 0.2, 0.3)  # (w_in, w_out, w_btw)\n",
+        "SAMPLE_K = None  # Betweenness örnekleme (None=tahmine dayalı)\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR\n"
@@ -79,8 +74,8 @@
       "id": "55d98b52",
       "metadata": {},
       "source": [
-        "## 2) Top N Paketleri Yükle",
-        "",
+        "## 2) Top N Paketleri Yükle\n",
+        "\n",
         "Liste, indirilmeye göre sıralı şekilde API’lerden çekilir. Öncelik ecosyste.ms; gerekirse npm registry / npms.io yedekleri kullanılır. Bu yaklaşım sabit dosyaya bağımlılığı kaldırır ve güncel popülerliği yansıtır."
       ]
     },
@@ -101,8 +96,8 @@
       "id": "38ec8e56",
       "metadata": {},
       "source": [
-        "## 3) Yönlü Ağı Kur",
-        "",
+        "## 3) Yönlü Ağı Kur\n",
+        "\n",
         "Kenar yönü Dependent → Dependency (paket → kullandığı bağımlılık). Bu yön, bir paketin ele geçirilmesi halinde etki akışını (bağımlıdan bağımlılığa) analiz etmeyi kolaylaştırır."
       ]
     },
@@ -122,12 +117,12 @@
       "id": "58466719",
       "metadata": {},
       "source": [
-        "## 4) Merkeziyet Metrikleri",
-        "",
-        "- In-Degree: Düğüme gelen kenar (bu pakete dayanan paket sayısı) → ele geçirilirse etki alanı.",
-        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu/karmaşıklığı.",
-        "- Betweenness: En kısa yollardaki aracılık → köprü/tek hata noktası riski.",
-        "",
+        "## 4) Merkeziyet Metrikleri\n",
+        "\n",
+        "- In-Degree: Düğüme gelen kenar (bu pakete dayanan paket sayısı) → ele geçirilirse etki alanı.\n",
+        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu/karmaşıklığı.\n",
+        "- Betweenness: En kısa yollardaki aracılık → köprü/tek hata noktası riski.\n",
+        "\n",
         "Not: Büyük graf’larda betweenness örneklemeli (k) hesaplanır; notebook ilk hücrede `SAMPLE_K` ile ayarlanabilir."
       ]
     },
@@ -148,7 +143,7 @@
       "id": "2d3995db",
       "metadata": {},
       "source": [
-        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)",
+        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)\n",
         "In/Out-Degree ve Betweenness için ilk 10 düğümü hem metin hem grafik olarak sunar. Bu listeler ağın yapısal omurgasını ve kritik köprü düğümlerini öne çıkarır."
       ]
     },
@@ -171,7 +166,7 @@
       "id": "0fbc6256",
       "metadata": {},
       "source": [
-        "## 6) Sonuçları Kaydet",
+        "## 6) Sonuçları Kaydet\n",
         "Kenarlıklar, merkeziyet metrikleri ve kısa rapor dosyaya yazılır. Böylece defter dışı analiz ve kıyaslamalara zemin hazırlanır."
       ]
     },
@@ -194,7 +189,7 @@
       "id": "ae03b462",
       "metadata": {},
       "source": [
-        "## 7) Hızlı Doğrulama",
+        "## 7) Hızlı Doğrulama\n",
         "Rastgele paketler için registry bağımlılıkları ile graf kenarlarını karşılaştırır. Küçük farklar sürüm farklılıkları ve metadata gecikmelerinden kaynaklanabilir."
       ]
     },
@@ -235,7 +230,7 @@
       "id": "e913f0ca",
       "metadata": {},
       "source": [
-        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)",
+        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)\n",
         "Top N düğümler turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir. Ağın genel topolojisi ve yıldız/omurga yapıları gözlemlenir."
       ]
     },
@@ -268,7 +263,7 @@
       "id": "ce54238c",
       "metadata": {},
       "source": [
-        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)",
+        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)\n",
         "Sadece Top N düğümlerin oluşturduğu alt-ağ; etiketler az düğüm olduğunda gösterilir. Kohort içi yapısal ilişkiler netleşir."
       ]
     },
@@ -303,8 +298,11 @@
       "id": "aeef7ca6",
       "metadata": {},
       "source": [
-        "## 14) Varsayımlar ve Sınırlamalar",
-        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n- Varsayılan olarak yalnız `dependencies` dahil; `peerDependencies` isteğe bağlı eklenebilir.\n- Global dependent sayıları dahil değildir; ecosyste.ms verisi eklenebilir.\n- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
+        "## 14) Varsayımlar ve Sınırlamalar\n",
+        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n",
+        "- Varsayılan olarak yalnız `dependencies` dahil; `peerDependencies` isteğe bağlı eklenebilir.\n",
+        "- Global dependent sayıları dahil değildir; ecosyste.ms verisi eklenebilir.\n",
+        "- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
       ]
     },
     {
@@ -369,7 +367,7 @@
       "id": "01795e98",
       "metadata": {},
       "source": [
-        "## 10) Derece Dağılımları (Histogram)",
+        "## 10) Derece Dağılımları (Histogram)\n",
         "In-degree ve out-degree dağılımları (log ölçek). Kuyruk davranışı ve yoğunlaşmalar görülür."
       ]
     },
@@ -380,7 +378,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import numpy as np\n",
         "indeg_vals = np.array(list(in_deg.values()))\n",
         "outdeg_vals = np.array(list(out_deg.values()))\n",
         "fig, ax = plt.subplots(1,2, figsize=(12,4), dpi=150)\n",
@@ -400,7 +397,7 @@
       "id": "81a79980",
       "metadata": {},
       "source": [
-        "## 11) Korelasyonlar (Dağılım Grafikleri)",
+        "## 11) Korelasyonlar (Dağılım Grafikleri)\n",
         "In-Degree vs Betweenness ve In-Degree vs Out-Degree ilişkileri; köprü düğümlerin derecesi ve dış bağımlılıklarının etkisi."
       ]
     },
@@ -411,7 +408,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import numpy as np\n",
         "nodes_list = list(G.nodes())\n",
         "x_in = np.array([in_deg.get(n,0) for n in nodes_list])\n",
         "y_btw = np.array([btw.get(n,0.0) for n in nodes_list])\n",
@@ -433,7 +429,7 @@
       "id": "cd947cca",
       "metadata": {},
       "source": [
-        "## 12) Bağlanırlık ve Bileşenler",
+        "## 12) Bağlanırlık ve Bileşenler\n",
         "Zayıf bağlanırlık bileşen sayısı, en büyük bileşen boyutu ve ortalama dereceler. Ağın parçalanabilirliği hakkında sezgi verir."
       ]
     },
@@ -444,7 +440,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import json\n",
         "import networkx as nx\n",
         "W = G.to_undirected()\n",
         "components = list(nx.connected_components(W))\n",
@@ -466,7 +461,7 @@
       "id": "106b32f1",
       "metadata": {},
       "source": [
-        "## 13) Köprü Kenarlar (Edge Betweenness)",
+        "## 13) Köprü Kenarlar (Edge Betweenness)\n",
         "Edge betweenness’a göre en kritik 10 kenar. Bu kenarların kopması, alt-ağların ayrışmasına yol açabilir."
       ]
     },
@@ -489,54 +484,56 @@
     },
     {
       "cell_type": "markdown",
+      "id": "d1e604b0",
       "metadata": {},
       "source": [
-        "## 13) Risk Skoru (Bileşik)",
+        "## 13) Risk Skoru (Bileşik)\n",
         "Normalize in/out/between ile ağırlıklı (w_in,w_out,w_btw) risk skoru. İlk 20’yi dışa aktaralım ve görselleştirelim."
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "id": "25126f96",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "from analysis_helpers import compute_risk_scores, save_risk_scores",
-        "risk = compute_risk_scores(in_deg, out_deg, btw, *RISK_WEIGHTS)",
-        "save_risk_scores(risk, in_deg, out_deg, btw, top_set, OUTDIR / 'risk_scores.csv')",
-        "# İlk 20 risk liderini görselleştir (PNG+SVG)",
-        "top20 = sorted(risk.items(), key=lambda kv: kv[1], reverse=True)[:20]",
-        "names = [n for n,_ in top20][::-1]; vals=[v for _,v in top20][::-1]",
-        "import matplotlib.pyplot as plt",
-        "plt.figure(figsize=(8,8), dpi=150); plt.barh(names, vals, color='tab:red'); plt.title('Risk Skoru İlk 20'); plt.xlabel('Risk'); plt.tight_layout();",
-        "plt.savefig(OUTDIR / 'top20_risk.png'); plt.savefig(OUTDIR / 'top20_risk.svg')",
+        "from analysis_helpers import compute_risk_scores, save_risk_scores\n",
+        "risk = compute_risk_scores(in_deg, out_deg, btw, *RISK_WEIGHTS)\n",
+        "save_risk_scores(risk, in_deg, out_deg, btw, top_set, OUTDIR / 'risk_scores.csv')\n",
+        "# İlk 20 risk liderini görselleştir (PNG+SVG)\n",
+        "top20 = sorted(risk.items(), key=lambda kv: kv[1], reverse=True)[:20]\n",
+        "names = [n for n,_ in top20][::-1]; vals=[v for _,v in top20][::-1]\n",
+        "plt.figure(figsize=(8,8), dpi=150); plt.barh(names, vals, color='tab:red'); plt.title('Risk Skoru İlk 20'); plt.xlabel('Risk'); plt.tight_layout();\n",
+        "plt.savefig(OUTDIR / 'top20_risk.png'); plt.savefig(OUTDIR / 'top20_risk.svg')\n",
         "(len(risk), len(top20))"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "e70cecca",
       "metadata": {},
       "source": [
-        "## 14) Robustluk Analizi (Risk Tabanlı Kaldırma)",
+        "## 14) Robustluk Analizi (Risk Tabanlı Kaldırma)\n",
         "Risk skoruna göre ilk 1/3/5 düğümü kaldırınca bağlanırlık nasıl değişiyor?"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "id": "fd7a8684",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "import json",
-        "from analysis_helpers import robustness_remove_and_stats",
-        "ranked = [n for n,_ in sorted(risk.items(), key=lambda kv: kv[1], reverse=True)]",
-        "ks = [1,3,5]",
-        "results = {}",
-        "for k in ks:",
-        "    removed = ranked[:k]",
-        "    stats = robustness_remove_and_stats(G, removed)",
-        "    results[str(k)] = {\"removed\": removed, \"stats\": stats}",
-        "(OUTDIR / 'robustness_risk.json').write_text(json.dumps(results, ensure_ascii=False, indent=2), encoding='utf-8')",
+        "from analysis_helpers import robustness_remove_and_stats\n",
+        "ranked = [n for n,_ in sorted(risk.items(), key=lambda kv: kv[1], reverse=True)]\n",
+        "ks = [1,3,5]\n",
+        "results = {}\n",
+        "for k in ks:\n",
+        "    removed = ranked[:k]\n",
+        "    stats = robustness_remove_and_stats(G, removed)\n",
+        "    results[str(k)] = {\"removed\": removed, \"stats\": stats}\n",
+        "(OUTDIR / 'robustness_risk.json').write_text(json.dumps(results, ensure_ascii=False, indent=2), encoding='utf-8')\n",
         "results"
       ]
     }
