analysis.ipynb: importlar ilk hücrede; matplotlib.pyplot as plt eklendi; TOP_N=1000; helper importları (risk/robustluk) ilk hücreye taşındı; tekrarlı importlar kaldırıldı

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -39,7 +39,18 @@
       "execution_count": null,
       "id": "2ec6ef54",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "WindowsPath('results')"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# İçe aktarımlar ve temel parametreler\n",
         "from pathlib import Path\n",
@@ -47,6 +58,10 @@
         "import os\n",
         "import matplotlib\n",
         "\n",
+        "",
+        "import matplotlib.pyplot as plt",
+        "",
+        "",
         "\n",
         "import networkx as nx\n",
         "from analysis_helpers import (\n",
@@ -56,11 +71,14 @@
         "save_edges,\n",
         "save_metrics,\n",
         "save_report,\n",
+        "    compute_risk_scores,",
+        "    save_risk_scores,",
+        "    robustness_remove_and_stats,",
         ")\n",
         "\n",
         "import json\n",
         "import numpy as np\n",
-        "TOP_N = 1000  # Top N paket (varsayılan)\n",
+        "TOP_N = 1000  # Top N paket (varsayılan)",
         "INCLUDE_PEER_DEPS = False  # peerDependencies'i eklemek icin True yapin\n",
         "RISK_WEIGHTS = (0.5, 0.2, 0.3)  # (w_in, w_out, w_btw)\n",
         "SAMPLE_K = None  # Betweenness örnekleme (None=tahmine dayalı)\n",
@@ -81,10 +99,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "0f58d428",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "API’lerden 100 paket çekildi\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(100,\n",
+              " ['semver',\n",
+              "  'ansi-styles',\n",
+              "  'debug',\n",
+              "  'chalk',\n",
+              "  'minimatch',\n",
+              "  'supports-color',\n",
+              "  'strip-ansi',\n",
+              "  'ms',\n",
+              "  'ansi-regex',\n",
+              "  'tslib',\n",
+              "  'string-width',\n",
+              "  'brace-expansion',\n",
+              "  'lru-cache',\n",
+              "  'commander',\n",
+              "  'type-fest',\n",
+              "  'wrap-ansi',\n",
+              "  'glob',\n",
+              "  'emoji-regex',\n",
+              "  'color-convert',\n",
+              "  'source-map'])"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "top_packages = fetch_top_packages(TOP_N)\n",
         "print(f'API’lerden {len(top_packages)} paket çekildi')\n",
@@ -103,10 +159,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "b9730467",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(155, 107)"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "G, top_set = build_dependency_graph(top_packages, cache_path=OUTDIR / 'cache_deps.json', include_peer_deps=INCLUDE_PEER_DEPS)\n",
         "G.number_of_nodes(), G.number_of_edges()"
@@ -128,10 +195,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "6005f87d",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(155, 107)"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "in_deg, out_deg, btw = compute_metrics(G, sample_k=SAMPLE_K)\n",
         "nodes = G.number_of_nodes(); edges = G.number_of_edges()\n",
@@ -149,10 +227,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "50212d69",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "([('strip-ansi', 3),\n",
+              "  ('string-width', 3),\n",
+              "  ('ansi-styles', 2),\n",
+              "  ('is-stream', 2),\n",
+              "  ('get-east-asian-width', 2),\n",
+              "  ('package-json-from-dist', 2),\n",
+              "  ('@jest/schemas', 2),\n",
+              "  ('debug', 1),\n",
+              "  ('chalk', 1),\n",
+              "  ('minimatch', 1)],\n",
+              " [('glob', 0.0002546473134708429),\n",
+              "  ('cross-spawn', 0.00021220609455903573),\n",
+              "  ('strip-ansi', 0.0001697648756472286),\n",
+              "  ('string-width', 0.0001697648756472286),\n",
+              "  ('p-locate', 0.0001697648756472286),\n",
+              "  ('p-limit', 0.00012732365673542146),\n",
+              "  ('locate-path', 0.00012732365673542146),\n",
+              "  ('cliui', 0.00012732365673542146),\n",
+              "  ('minimatch', 8.48824378236143e-05),\n",
+              "  ('wrap-ansi', 8.48824378236143e-05)],\n",
+              " [('string-width', 3),\n",
+              "  ('strip-ansi', 3),\n",
+              "  ('is-stream', 2),\n",
+              "  ('ansi-styles', 2),\n",
+              "  ('agent-base', 1),\n",
+              "  ('debug', 1),\n",
+              "  ('cliui', 1),\n",
+              "  ('yargs-parser', 1),\n",
+              "  ('mime-types', 1),\n",
+              "  ('shebang-command', 1)],\n",
+              " [('glob', 0.0002546473134708429),\n",
+              "  ('cross-spawn', 0.00021220609455903573),\n",
+              "  ('string-width', 0.0001697648756472286),\n",
+              "  ('p-locate', 0.0001697648756472286),\n",
+              "  ('strip-ansi', 0.0001697648756472286),\n",
+              "  ('cliui', 0.00012732365673542146),\n",
+              "  ('p-limit', 0.00012732365673542146),\n",
+              "  ('locate-path', 0.00012732365673542146),\n",
+              "  ('shebang-command', 8.48824378236143e-05),\n",
+              "  ('minimatch', 8.48824378236143e-05)])"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "top_in_all = sorted(in_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
         "top_btw_all = sorted(btw.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
@@ -172,10 +300,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "41b7326a",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[WindowsPath('results/cache_deps.json'),\n",
+              " WindowsPath('results/edges.csv'),\n",
+              " WindowsPath('results/metrics.csv'),\n",
+              " WindowsPath('results/report.md'),\n",
+              " WindowsPath('results/top_packages.txt')]"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "save_edges(G, OUTDIR / 'edges.csv')\n",
         "save_metrics(in_deg, out_deg, btw, top_set, OUTDIR / 'metrics.csv')\n",
@@ -195,10 +338,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "1e10993c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import random, requests, urllib.parse\n",
         "def get_registry_deps(name: str):\n",
@@ -236,10 +390,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "31617bbc",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'plt' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m node_sizes = [\u001b[32m100\u001b[39m + (\u001b[32m400\u001b[39m * (in_deg.get(n,\u001b[32m0\u001b[39m) / max_in \u001b[38;5;28;01mif\u001b[39;00m max_in \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0\u001b[39m)) \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m G.nodes()]\n\u001b[32m      6\u001b[39m node_colors = [\u001b[33m'\u001b[39m\u001b[33mtab:orange\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m top_set \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mtab:blue\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m G.nodes()]\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mplt\u001b[49m.figure(figsize=(\u001b[32m12\u001b[39m, \u001b[32m9\u001b[39m), dpi=\u001b[32m150\u001b[39m)\n\u001b[32m      8\u001b[39m nx.draw_networkx_edges(G, pos, arrows=\u001b[38;5;28;01mFalse\u001b[39;00m, width=\u001b[32m0.5\u001b[39m, alpha=\u001b[32m0.25\u001b[39m)\n\u001b[32m      9\u001b[39m nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=\u001b[32m0.85\u001b[39m, linewidths=\u001b[32m0.2\u001b[39m, edgecolors=\u001b[33m'\u001b[39m\u001b[33m#444444\u001b[39m\u001b[33m'\u001b[39m)\n",
+            "\u001b[31mNameError\u001b[39m: name 'plt' is not defined"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "N = G.number_of_nodes()\n",
@@ -440,7 +606,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import networkx as nx\n",
         "W = G.to_undirected()\n",
         "components = list(nx.connected_components(W))\n",
         "components_sizes = sorted([len(c) for c in components], reverse=True)\n",
@@ -473,7 +638,6 @@
       "outputs": [],
       "source": [
         "import csv\n",
-        "import networkx as nx\n",
         "eb = nx.edge_betweenness_centrality(G, normalized=True)\n",
         "top_edges = sorted(eb.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
         "with (OUTDIR / 'edge_betweenness_top10.csv').open('w', newline='', encoding='utf-8') as f:\n",
@@ -498,7 +662,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from analysis_helpers import compute_risk_scores, save_risk_scores\n",
         "risk = compute_risk_scores(in_deg, out_deg, btw, *RISK_WEIGHTS)\n",
         "save_risk_scores(risk, in_deg, out_deg, btw, top_set, OUTDIR / 'risk_scores.csv')\n",
         "# İlk 20 risk liderini görselleştir (PNG+SVG)\n",
