Notebook: ek çıktılar için kısa notlar eklendi (risk, robustluk, histogram, korelasyon)

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -389,6 +389,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Çıktı Notu: In/Out-degree histogramları kaydedildi (degree_histograms.*)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "81a79980",
    "metadata": {},
    "source": [
@@ -417,6 +424,13 @@
     "plt.tight_layout()\n",
     "plt.savefig(OUTDIR / 'scatter_correlations.png')\n",
     "plt.savefig(OUTDIR / 'scatter_correlations.svg')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Çıktı Notu: Korelasyon saçılımları kaydedildi (scatter_correlations.*)."
    ]
   },
   {
@@ -503,6 +517,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Çıktı Notu: Risk skorları kaydedildi (risk_scores.csv); Top 20 görseller üretildi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e70cecca",
    "metadata": {},
    "source": [
@@ -527,6 +548,13 @@
     "    results[str(k)] = {\"removed\": removed, \"stats\": stats}\n",
     "(OUTDIR / 'robustness_risk.json').write_text(json.dumps(results, ensure_ascii=False, indent=2), encoding='utf-8')\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Çıktı Notu: Robustluk sonuçları kaydedildi (robustness_risk.json)."
    ]
   },
   {
